Removeal of classes that aren't needed Enabled Checkstyle for all applications Enabeled base imports for MM in all apps